Fix error-prone warnings.